<resources>
    <string name="app_name">Calculadora_Tres</string>
    <string name="somar">SOMAR</string>
    <string name="subtrair">SUBTRAIR</string>
    <string name="multiplica">MULTIPLICAR</string>
    <string name="dividir">DIVIDIR</string>
    <string name="valor1">Digite o primeiro valor</string>
    <string name="valor2">Digite o segundo valor</string>
    <string name="voltar">Voltar</string>
</resources>